--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -111,7 +111,6 @@ item.ak15.name=AK-15
 item.m38_dmr.name=HK 416
 item.m4a1.name=M4A1
 item.vss_vintorez.name=VSS Vintorez
-item.sr3_vikhr.name=SR-3 Vikhr
 item.kbp_9a91.name=KBP 9A-91 Carbine
 item.colt_m45a1.name=Colt M45A1
 item.m9a1.name=M9A1 Beretta
@@ -139,7 +138,6 @@ item.scar_l.name=Mk16 Scar-L
 item.scar_h_cqc.name=Mk17 CQC Scar-H
 item.m82_barrett.name=M82 Barrett
 item.mp40.name=MP-40
-item.m1a1_thompson.name=M1A1 Thompson
 item.m1928_thompson.name=M1928 Thompson
 item.remington870.name=Remington-870
 item.hk_416.name=HK 416
@@ -148,33 +146,18 @@ item.vp70.name=VP-70
 item.he_standard_combat_shotgun.name=HE-SCS
 item.cz805_bren.name=CZ-805 Bren
 item.albert_01r.name=Albert-01R
-item.nv4.name=NV4
-item.volk.name=Volk
 item.type2.name=Type-2
 item.MP43E.name=MP-43E
 item.M1873.name=M1873
 item.m8a7.name=M8A7
 item.f2000.name=FN F2000
 item.g36c.name=HK G36C
-item.m6c.name=M6C Magnum
-item.ma37_icws.name=MA37 ICWS
-item.m6c_socom.name=M6C SOCOM
-item.m45.name=M45
-item.ma5d.name=MA5D ICWS
-item.br55.name=BR-55
-item.m392.name=M392 DMR
-item.type51.name=Type-51
-item.m20.name=M20 PDW
-item.srs99.name=SRS-99 AMSR
 item.gl06.name=GL-06
 item.rpg7.name=RPG-7
-item.esa23.name=ESA-23
 item.m1014.name=M1014
 item.m16a4.name=M16A4
 item.acr.name=Remington ACR
 item.ak103_bullpup.name=AK-103 Bullpup
-item.sl8.name=HK SL8
-item.dl44.name=DL-44
 item.supernova.name=Benelli Supernova
 item.Python.name=Colt Python
 item.p226.name=SIG P226
@@ -187,7 +170,6 @@ item.desert_eagle.name=IMI Desert Eagle
 item.chainsaw.name=Chainsaw
 item.m202.name=M202 FLASH
 item.m79.name=M79 GL
-item.bfg_9000.name=BFG 9000
 item.chiappa_triple_crown.name=Chiappa Triple Crown
 item.quad_barrel_shotgun.name=Quad-Barrel Shotgun
 item.m134.name=M134 Minigun
@@ -218,7 +200,6 @@ item.hs12.name=HS-12
 item.kriss_vector.name=Kriss Vector
 item.g43_gewehr.name=G43 Gewehr
 item.dp28.name=DP-28
-item.socom_m4a1.name=SOCOM M4A1
 item.m17.name=M17
 item.hk_p12.name=HK P12
 item.mp7a1.name=HK MP7A1
@@ -230,7 +211,6 @@ item.remington_700.name=Remington-700
 item.ak74.name=AK-74
 item.cz805_bren_s1.name=CZ-805 Bren S1
 item.makarov_pm.name=Makarov PM
-item.mp7_black_ice.name=HK MP7 Black Ice
 item.origin12.name=Origin-12
 item.fnfal.name=FN FAL
 item.m16a1.name=M16A1
@@ -256,7 +236,7 @@ item.famas_f1.name=Famas F1
 item.m1_carbine.name=M1 Carbine
 item.g3.name=HK G3
 item.dsr1.name=DSR1
-item.sig_xm7.name=SIG MCX Spear XM7
+item.sig_xm7.name=SIG MCX SPEAR XM7
 item.ssg_08.name=SSG-08
 item.sig556.name=SIG-556
 item.fmg9.name=Magpul FMG-9
