--- a/src/main/resources/assets/mwc/lang/tr_TR.lang
+++ b/src/main/resources/assets/mwc/lang/tr_TR.lang
@@ -788,7 +788,7 @@ item.mwc_MIMP5TRRail.name=MI MP5 TR Ray
 item.mwc_MIMP5MRail.name=MI MP5 M Ray
 item.mwc_ShotgunRail.name=Shotgun Rayı
 item.mwc_Kar98KRail.name=Kar98K Rayı
-item.mwc_M60Rail.name=M60 Rayı
+item.mwc_M60Mk43Rail.name=M60 Rayı
 item.mwc_Remington700Chassis.name=Remington-700 Şasi
 item.mwc_SSG08Chassis.name=SSG-08 Şasi
 item.mwc_M4Receiver.name=M4 Alıcısı
