--- a/src/main/resources/assets/mwc/lang/zh_CN.lang
+++ b/src/main/resources/assets/mwc/lang/zh_CN.lang
@@ -888,7 +888,7 @@ item.mwc_MIMP5TRRail.name=MI MP5 TR 导轨
 item.mwc_MIMP5MRail.name=MI MP5 M 导轨
 item.mwc_ShotgunRail.name=霰弹枪瞄具导轨
 item.mwc_Kar98KRail.name=Kar98K 导轨
-item.mwc_M60Rail.name=M60 导轨
+item.mwc_M60Mk43Rail.name=M60 导轨
 item.mwc_NGSWRail.name=NGSW-R 导轨
 item.mwc_NGSWRRail.name=NGSW-R 导轨
 item.mwc_Kar98Krail.name=Kar98K 导轨
