--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -794,7 +794,7 @@ item.mwc_VSSMDustCover.name=VSSM Dust Cover
 item.mwc_P90swordfish.name=P90 Swordfish Kit
 item.mwc_P90DefaultKit.name=P90 Default Kit
 item.mwc_P90Terminator.name=P90 Terminator Conversion Kit
-item.mwc_AUGA1.name=AUG A1 Conversion Kit
+item.mwc_AUGA1.name=AUG A1 Handguard
 item.mwc_AUGParaConversion.name=AUG PARA Conversion Kit
 item.mwc_AUGDefaultKit.name=AUG Default Kit
 item.mwc_KrissVectorSwordfish.name=Kriss Vector Swordfish Kit
