--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -245,7 +245,7 @@ item.type20.name=Howa Type-20
 item.fiveseven.name=FN Five-Seven
 item.zbroyar_z10.name=Zbroyar-Z10
 item.malyuk.name=Malyuk
-item.pgm_hecate_ii.name=PGM Hecate II
+item.pgm_hecate_ii.name=PGM Hécate II
 item.pp19vityaz.name=PP-19-01 Vityaz
 item.turret.name=Automated Turret
 item.turretupgraded.name=Automated Turret vers.2
@@ -719,8 +719,8 @@ item.mwc_ARPRSPrecisionStock.name=AR PRS Precision Stock
 item.mwc_KS23Stock.name=KS23 Stock
 item.mwc_KS23MStock.name=KS23M Stock
 item.mwc_UziWoodStock.name=Uzi Wood Stock
-item.mwc_UziFoldingStockOpened.name=Uzi Folding Stock Open
-item.mwc_UziFoldingStockClosed.name=Uzi Folding Stock Closed
+item.mwc_UziFoldingStockOpened.name=Uzi Folding Stock (Open)
+item.mwc_UziFoldingStockClosed.name=Uzi Folding Stock (Closed)
 item.mwc_InterventionStock.name=Intervention Stock
 item.mwc_InterventionFJXLUX7Stock.name=Intervention FJX-LUX Stock
 item.mwc_InterventionKiloTaCStock.name=Intervention Kilo TaC Stock
