--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -268,8 +268,8 @@ item.mwc_M9DrumMag.name=65rnd 9x19mm Drum Magazine
 item.mwc_APSMag_2.name=20rnd 9x19mm Magazine (APS)
 item.mwc_M1911Mag.name=7rnd .45 ACP Magazine
 item.mwc_M1911Mag_2.name=15rnd .45 ACP Magazine
-item.mwc_AS50Mag_2.name=10rnd .50 BMG Magazine (AS50)
-item.mwc_AX50Mag.name=5rnd .50 BMG Magazine (AX50)
+item.mwc_AS50Mag_2.name=10rnd .50 BMG Magazine
+item.mwc_AX50Mag.name=5rnd .50 BMG Magazine
 item.mwc_FrommerStopMag.name=8rnd .380 ACP Magazine
 item.mwc_G36CMag_2.name=30rnd 5.56x45mm NATO HK Magazine
 item.mwc_Glock18Cmag_2.name=20rnd 9x19mm Magazine
@@ -311,7 +311,7 @@ item.mwc_M134Mag.name=1000rnd 7.62x51mm Magazine
 item.mwc_M60Mag.name=100rnd 7.62x51mm Magazine
 item.mwc_M249Mag.name=100rnd 5.56x45mm NATO Magazine
 item.mwc_PKMMag.name=120rnd 7.62x54mm Magazine
-item.mwc_FuelCell.name=(Chainsaw) Fuel Capsule
+item.mwc_FuelCell.name=Fuel Capsule
 item.mwc_BrenMag.name=30rnd 7.62x51mm Bren Magazine
 item.mwc_HiPowerMag.name=13rnd 9x19mm Magazine
 item.mwc_stonermag.name=100rnd 5.56x45mm Magazine
@@ -371,7 +371,7 @@ item.mwc_AK74Mag60.name=60rnd 5.45x39mm 74 Magazine
 item.mwc_AK75Mag545x39.name=75rnd 5.45x39mm Drum Magazine
 item.mwc_AK12Mag_2.name=30rnd 5.45x39mm 12 Magazine
 item.mwc_Z10Mag.name=10rnd 7.62x51mm NATO Z10 Magazine
-item.mwc_PP1901Mag.name=30rnd 9x19mm Magazine(PP-19 vityaz)
+item.mwc_PP1901Mag.name=30rnd 9x19mm Magazine (PP-19 Vityaz)
 
 item.mwc_Bullet765x21.name=7.65x21mm Bullet
 item.mwc_Bullet9x18mm.name=9x18mm Bullet
