--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1018,6 +1018,7 @@ tile.mwc_white_desk_left.name=White Desk Left
 tile.mwc_white_desk_middle.name=White Desk Middle
 tile.mwc_white_desk_right.name=White Desk Right
 tile.mwc_trash_bin.name=Trash Bin
+tile.mwc_trash_bin_rotated.name=Trash Bin (Rotated)
 tile.mwc_caution_sign.name=Caution Sign
 tile.mwc_electric_box.name=Electric Box
 tile.mwc_electric_box_opened.name=Electric Box Opened
@@ -1042,6 +1043,7 @@ tile.mwc_floodlight.name=Flood Light
 tile.mwc_floodlight_rotated.name=Flood Light (Rotated)
 tile.mwc_Radio_rotated.name=Radio (Rotated)
 tile.mwc_Radio.name=Radio
+tile.mwc_camera.name=Camera
 tile.mwc_camera_rotated.name=Camera (Rotated)
 tile.mwc_pc.name=PC
 tile.mwc_propanetank.name=Propane Tank
