--- a/src/main/resources/assets/mwc/lang/zh_CN.lang
+++ b/src/main/resources/assets/mwc/lang/zh_CN.lang
@@ -1017,16 +1017,16 @@ tile.mwc_outdoor_chair.name=戶外椅
 tile.mwc_home_chair_rotated.name=家用椅子 (旋转)
 tile.mwc_outdoor_chair_rotated.name=戶外椅 (旋转)
 tile.mwc_vending_machine.name=自动贩卖机
-tile.mwc_ServerRackLeft.name=服务器机柜 左
-tile.mwc_ServerRackEmptyLeft.name=服务器机柜架 左
-tile.mwc_ServerRackLeftAlt.name=服务器机柜 左 (ALT)
-tile.mwc_ServerRackLeftAlt2.name=服务器机柜 左 (ALT2)
-tile.mwc_ServerRackLeftAlt3.name=服务器机柜 左 (ALT3)
-tile.mwc_ServerRackEmptyRight.name=服务器机柜架 右
-tile.mwc_ServerRackRight.name=服务器机柜 右
-tile.mwc_ServerRackRightAlt.name=服务器机柜 右 (ALT)
-tile.mwc_ServerRackTopLeft.name=服务器机柜 左上
-tile.mwc_ServerRackTopRight.name=服务器机柜 右上
+tile.mwc_server_rack_left.name=服务器机柜 左
+tile.mwc_server_rack_empty_left.name=服务器机柜架 左
+tile.mwc_server_rack_left_alt.name=服务器机柜 左 (ALT)
+tile.mwc_server_rack_left_alt_2.name=服务器机柜 左 (ALT2)
+tile.mwc_server_rack_left_alt_3.name=服务器机柜 左 (ALT3)
+tile.mwc_server_rack_empty_right.name=服务器机柜架 右
+tile.mwc_server_rack_right.name=服务器机柜 右
+tile.mwc_server_rack_right_alt.name=服务器机柜 右 (ALT)
+tile.mwc_server_rack_top_left.name=服务器机柜 左上
+tile.mwc_server_rack_top_right.name=服务器机柜 右上
 tile.mwc_DuelFloodLight.name=决斗泛光灯
 tile.mwc_FloodLight.name=泛光灯
 tile.mwc_Radio_rotated.name=无线电 (旋转)
