--- a/src/main/resources/assets/mwc/lang/es_ES.lang
+++ b/src/main/resources/assets/mwc/lang/es_ES.lang
@@ -962,7 +962,7 @@ tile.mwc_impaled_body.name=Impaled Body
 tile.mwc_blank.name=Blank Block
 tile.mwc_dumpster.name=Dumpster
 tile.mwc_wooden_crate.name=Wooden Crate
-tile.mwc_wooden_crate_opened.name=Wooden Crate Opened
+tile.mwc_wooden_crate_opened.name=Wooden Crate (Opened)
 tile.mwc_operating_table.name=Operating Table
 tile.mwc_operating_table_alt.name=Operating Table (ALT)
 tile.mwc_forklift.name=Forklift
@@ -989,16 +989,16 @@ tile.mwc_outdoor_chair.name=Outdoor Chair
 tile.mwc_home_chair_rotated.name=Home Chair (Rotated)
 tile.mwc_outdoor_chair_rotated.name=Outdoor Chair (Rotated)
 tile.mwc_vending_machine.name=Vending Machine
-tile.mwc_ServerRackLeft.name=Server Rack Left
-tile.mwc_ServerRackEmptyLeft.name=Server Rack Empty Left
-tile.mwc_ServerRackLeftAlt.name=Server Rack Left (ALT)
-tile.mwc_ServerRackLeftAlt2.name=Server Rack Left (ALT2)
-tile.mwc_ServerRackLeftAlt3.name=Server Rack Left (ALT3)
-tile.mwc_ServerRackEmptyRight.name=Server Rack Empty Right
-tile.mwc_ServerRackRight.name=Server Rack Right
-tile.mwc_ServerRackRightAlt.name=Server Rack Right (ALT)
-tile.mwc_ServerRackTopLeft.name=Server Rack Top Left
-tile.mwc_ServerRackTopRight.name=Server Rack Top Right
+tile.mwc_server_rack_left.name=Server Rack Left
+tile.mwc_server_rack_empty_left.name=Server Rack Empty Left
+tile.mwc_server_rack_left_alt.name=Server Rack Left (ALT)
+tile.mwc_server_rack_left_alt_2.name=Server Rack Left (ALT2)
+tile.mwc_server_rack_left_alt_3.name=Server Rack Left (ALT3)
+tile.mwc_server_rack_empty_right.name=Server Rack Empty Right
+tile.mwc_server_rack_right.name=Server Rack Right
+tile.mwc_server_rack_right_alt.name=Server Rack Right (ALT)
+tile.mwc_server_rack_top_left.name=Server Rack Top Left
+tile.mwc_server_rack_top_right.name=Server Rack Top Right
 tile.mwc_DuelFloodLight.name=Duel Flood Light
 tile.mwc_FloodLight.name=Flood Light
 tile.mwc_Radio_rotated.name=Radio (Rotated)
