--- a/src/main/resources/assets/mwc/lang/ko_KR.lang
+++ b/src/main/resources/assets/mwc/lang/ko_KR.lang
@@ -990,16 +990,16 @@ tile.mwc_outdoor_chair.name=야외용 의자
 tile.mwc_home_chair_rotated.name=가정용 의자 (돌아감)
 tile.mwc_outdoor_chair_rotated.name=야외용 의자 (돌아감)
 tile.mwc_vending_machine.name=자판기
-tile.mwc_ServerRackLeft.name=서버 랙 왼쪽
-tile.mwc_ServerRackEmptyLeft.name=빈 서버 랙 왼쪽
-tile.mwc_ServerRackLeftAlt.name=서버 랙 왼쪽 (ALT)
-tile.mwc_ServerRackLeftAlt2.name=서버 랙 왼쪽 (ALT2)
-tile.mwc_ServerRackLeftAlt3.name=서버 랙 왼쪽 (ALT3)
-tile.mwc_ServerRackEmptyRight.name=빈 서버 랙 오른쪽
-tile.mwc_ServerRackRight.name=서버 랙 오른쪽
-tile.mwc_ServerRackRightAlt.name=서버 랙 오른쪽 (ALT)
-tile.mwc_ServerRackTopLeft.name=서버 랙 상단 왼쪽
-tile.mwc_ServerRackTopRight.name=서버 랙 상단 오른쪽
+tile.mwc_server_rack_left.name=서버 랙 왼쪽
+tile.mwc_server_rack_empty_left.name=빈 서버 랙 왼쪽
+tile.mwc_server_rack_left_alt.name=서버 랙 왼쪽 (ALT)
+tile.mwc_server_rack_left_alt_2.name=서버 랙 왼쪽 (ALT2)
+tile.mwc_server_rack_left_alt_3.name=서버 랙 왼쪽 (ALT3)
+tile.mwc_server_rack_empty_right.name=빈 서버 랙 오른쪽
+tile.mwc_server_rack_right.name=서버 랙 오른쪽
+tile.mwc_server_rack_right_alt.name=서버 랙 오른쪽 (ALT)
+tile.mwc_server_rack_top_left.name=서버 랙 상단 왼쪽
+tile.mwc_server_rack_top_right.name=서버 랙 상단 오른쪽
 tile.mwc_DuelFloodLight.name=이중 투광 조명등
 tile.mwc_FloodLight.name=투광 조명등
 tile.mwc_Radio_rotated.name=라디오 (돌아감)
