--- a/src/main/resources/assets/mwc/lang/pt_BR.lang
+++ b/src/main/resources/assets/mwc/lang/pt_BR.lang
@@ -997,16 +997,16 @@ tile.mwc_outdoor_chair.name=Cadeira do ar livre
 tile.mwc_home_chair_rotated.name=Cadeira de Casa (Rotacionada)
 tile.mwc_outdoor_chair_rotated.name=Cadeira do ar livre (Rotacionada)
 tile.mwc_vending_machine.name=Maquina de Vendas
-tile.mwc_ServerRackLeft.name=Rack de Servidor Esquerdo
-tile.mwc_ServerRackEmptyLeft.name=Rack de Servidor Vazio à Esquerda
-tile.mwc_ServerRackLeftAlt.name=Rack de Servidor Esquerdo (ALT)
-tile.mwc_ServerRackLeftAlt2.name=Rack de Servidor Esquerdo (ALT2)
-tile.mwc_ServerRackLeftAlt3.name=Rack de Servidor Esquerdo (ALT3)
-tile.mwc_ServerRackEmptyRight.name=Rack de Servidor Vazio à Direita
-tile.mwc_ServerRackRight.name=Rack de Servidor Direito
-tile.mwc_ServerRackRightAlt.name=Rack de Servidor Direito (ALT)
-tile.mwc_ServerRackTopLeft.name=Rack de Servidor Superior Esquerdo
-tile.mwc_ServerRackTopRight.name=Rack de Servidor Superior Direito
+tile.mwc_server_rack_left.name=Rack de Servidor Esquerdo
+tile.mwc_server_rack_empty_left.name=Rack de Servidor Vazio à Esquerda
+tile.mwc_server_rack_left_alt.name=Rack de Servidor Esquerdo (ALT)
+tile.mwc_server_rack_left_alt_2.name=Rack de Servidor Esquerdo (ALT2)
+tile.mwc_server_rack_left_alt_3.name=Rack de Servidor Esquerdo (ALT3)
+tile.mwc_server_rack_empty_right.name=Rack de Servidor Vazio à Direita
+tile.mwc_server_rack_right.name=Rack de Servidor Direito
+tile.mwc_server_rack_right_alt.name=Rack de Servidor Direito (ALT)
+tile.mwc_server_rack_top_left.name=Rack de Servidor Superior Esquerdo
+tile.mwc_server_rack_top_right.name=Rack de Servidor Superior Direito
 tile.mwc_DuelFloodLight.name=Holofote Duplo
 tile.mwc_FloodLight.name=Holofote
 tile.mwc_Radio_rotated.name=Radio (Rotacionado)
