--- a/src/main/resources/assets/mwc/lang/tr_TR.lang
+++ b/src/main/resources/assets/mwc/lang/tr_TR.lang
@@ -988,16 +988,16 @@ tile.mwc_outdoor_chair.name=Dış Mekan Koltuğu
 tile.mwc_home_chair_rotated.name=Ev Koltuğu (Döndürülmüş)
 tile.mwc_outdoor_chair_rotated.name=Dış Mekan Koltuğu (Döndürülmüş)
 tile.mwc_vending_machine.name=Otomat Makinesi
-tile.mwc_ServerRackLeft.name=Sunucu Rafı Sol
-tile.mwc_ServerRackEmptyLeft.name=Boş Sunucu Rafı Sol
-tile.mwc_ServerRackLeftAlt.name=Sunucu Rafı Sol (ALT)
-tile.mwc_ServerRackLeftAlt2.name=Sunucu Rafı Sol (ALT2)
-tile.mwc_ServerRackLeftAlt3.name=Sunucu Rafı Sol (ALT3)
-tile.mwc_ServerRackEmptyRight.name=Boş Sunucu Rafı Sağ
-tile.mwc_ServerRackRight.name=Sunucu Rafı Sağ
-tile.mwc_ServerRackRightAlt.name=Sunucu Rafı Sağ (ALT)
-tile.mwc_ServerRackTopLeft.name=Sunucu Rafı Üst Sol
-tile.mwc_ServerRackTopRight.name=Sunucu Rafı Üst Sağ
+tile.mwc_server_rack_left.name=Sunucu Rafı Sol
+tile.mwc_server_rack_empty_left.name=Boş Sunucu Rafı Sol
+tile.mwc_server_rack_left_alt.name=Sunucu Rafı Sol (ALT)
+tile.mwc_server_rack_left_alt_2.name=Sunucu Rafı Sol (ALT2)
+tile.mwc_server_rack_left_alt_3.name=Sunucu Rafı Sol (ALT3)
+tile.mwc_server_rack_empty_right.name=Boş Sunucu Rafı Sağ
+tile.mwc_server_rack_right.name=Sunucu Rafı Sağ
+tile.mwc_server_rack_right_alt.name=Sunucu Rafı Sağ (ALT)
+tile.mwc_server_rack_top_left.name=Sunucu Rafı Üst Sol
+tile.mwc_server_rack_top_right.name=Sunucu Rafı Üst Sağ
 tile.mwc_DuelFloodLight.name=Çift Dökme Işık
 tile.mwc_FloodLight.name=Dökme Işık
 tile.mwc_Radio_rotated.name=Radyo (Döndürülmüş)
