--- a/src/main/resources/assets/mwc/lang/ko_KR.lang
+++ b/src/main/resources/assets/mwc/lang/ko_KR.lang
@@ -12,9 +12,9 @@ entity.soldier.name=병사
 item.mwc_gas-detector.name=가스 감지기
 item.mwc_GasGrenade.name=가스 수류탄
 
-item.Marine_helmet.name=케블라 헬멧 (탄색)
-item.Marine_chest.name=전투복 상의 (탄색)
-item.Marine_boots.name=전투화 (탄색)
+item.Marine_helmet.name=케블라 헬멧 (황갈색)
+item.Marine_chest.name=전투복 상의 (황갈색)
+item.Marine_boots.name=전투화 (황갈색)
 
 item.Spec_Ops_helmet.name=케블라 헬멧 (검은색)
 item.Spec_Ops_chest.name=전투복 상의 (검은색)
@@ -44,9 +44,9 @@ item.Swat_boots.name=SWAT 전투모
 
 item.Tactical_helmet.name=전술 야간투시경
 
-item.Nazisanta_helmet.name=3 제국 산타 모자
-item.Nazisanta_chest.name=3 제국 산타 코트
-item.Nazisanta_boots.name=3 제국 산타 신발
+item.Nazisanta_helmet.name=제3제국 산타 모자
+item.Nazisanta_chest.name=제3제국 산타 코트
+item.Nazisanta_boots.name=제3제국 산타 신발
 
 item.Santa_helmet.name=산타 베레모
 item.Santa_chest.name=산타 코트
@@ -67,15 +67,15 @@ item.SCPGuard_boots.name=SCP 경비원 신발
 item.Dclass_chest.name=D-계급 상의
 item.Dclass_boots.name=D-계급 신발
 
-item.mwc_combat_sustainment_backpack_tan.name=전투 유지 배낭 (탄색)
+item.mwc_combat_sustainment_backpack_tan.name=전투 유지 배낭 (황갈색)
 item.mwc_combat_sustainment_backpack_black.name=전투 유지 배낭 (검은색)
 item.mwc_combat_sustainment_backpack_forest.name=전투 유지 배낭 (숲 위장)
 
-item.mwc_assault_backpack_tan.name=돌격 배낭 (탄색)
+item.mwc_assault_backpack_tan.name=돌격 배낭 (황갈색)
 item.mwc_assault_backpack_black.name=돌격 배낭 (검은색)
 item.mwc_assault_backpack_forest.name=돌격 배낭 (숲 위장)
 
-item.mwc_tru_spec_cordura_backpack_tan.name=Tru-Spec 코듀라 배낭 (탄색)
+item.mwc_tru_spec_cordura_backpack_tan.name=Tru-Spec 코듀라 배낭 (황갈색)
 item.mwc_tru_spec_cordura_backpack_black.name=Tru-Spec 코듀라 배낭 (검은색)
 item.mwc_tru_spec_cordura_backpack_forest.name=Tru-Spec 코듀라 배낭 (숲 위장)
 
@@ -275,7 +275,7 @@ item.mwc_M4A1Mag_2.name=30발 5.56x45mm NATO STANAG 탄창
 item.mwc_AK101Mag_2.name=30발 5.56x45mm 탄창
 item.mwc_AK60Mag.name=60발 5.56x45mm 탄창
 item.mwc_AK15Mag_2.name=30발 7.62x39mm PMAG 탄창
-item.mwc_AK47PMAGTan.name=30발 7.62x39mm PMAG 탄창 (탄색)
+item.mwc_AK47PMAGTan.name=30발 7.62x39mm PMAG 탄창 (황갈색)
 item.mwc_AK47Mag.name=30발 7.62x39mm 탄창
 item.mwc_AK50Mag.name=50발 7.62x39mm 드럼 탄창
 item.mwc_AK75Mag.name=75발 7.62x39mm 드럼 탄창
@@ -439,7 +439,7 @@ item.night_stick.name=야경봉
 item.mwc_wcam.name=카메라
 item.mwc_tablet.name=태블릿
 
-item.mwc_M67Frag.name=M67 수류탄
+item.mwc_M67Frag.name=M67=세열수류탄
 item.mwc_ImpactGrenade.name=충격 수류탄
 item.mwc_M18White.name=M18 연막탄 (백색)
 item.mwc_Flash.name=섬광탄
@@ -504,7 +504,7 @@ item.mwc_LVOAVHandGuard.name=LVOAV 총열덮개
 item.mwc_M38HandGuard.name=M38 총열덮개
 item.mwc_Mk18HandGuard.name=Mk18 총열덮개
 item.mwc_M4MagpulHandGuard.name=M4 맥풀 총열덮개
-item.mwc_M4MagpulHandGuardTan.name=M4 맥풀 총열덮개 (탄색)
+item.mwc_M4MagpulHandGuardTan.name=M4 맥풀 총열덮개 (황갈색)
 item.mwc_M4HandGuard.name=M4 총열덮개
 item.mwc_M16HandGuard.name=M16 총열덮개
 item.mwc_M4CarbineHandGuard.name=M4 카빈 총열덮개
@@ -562,7 +562,7 @@ item.mwc_ScorpionEVO3A1HandguardShort.name=짧은 스콜피온 총열덮개
 item.mwc_ScorpionEVO3A1HandguardLong.name=긴 스콜피온 총열덮개
 item.mwc_MP5NavyHandGuard.name=MP5 Navy 총열덮개
 item.mwc_AR15FN15Handguard.name=AR15/FN15 총열덮개
-item.mwc_HK416HandGuardBlackAndTan.name=HK416 총열덮개 (검정/탄색)
+item.mwc_HK416HandGuardBlackAndTan.name=HK416 총열덮개 (검정/황갈색)
 item.mwc_HK417Handguard.name=HK417 총열덮개
 item.mwc_HK417HandguardTan.name=HK417 총열덮개 (탄색)
 item.mwc_Mk18HandGuardBlack.name=Mk18 총열덮개 (검은색)
@@ -608,11 +608,11 @@ item.mwc_AK12Iron.name=AK-12 가늠쇠
 item.mwc_Acog.name=트리지콘 ACOG
 item.mwc_Specter.name=Elcan 스펙터 SFOV4-A1 조준경
 item.mwc_Reflex.name=15 MOA 반사 조준경
-item.mwc_Holographic.name=이오텍 EXPS-3 홀로그램 조준경 (탄색)
+item.mwc_Holographic.name=이오텍 EXPS-3 홀로그램 조준경 (황갈색)
 item.mwc_HolographicAlt.name=이오텍 512 A65 홀로그램 (검은색)
 item.mwc_Kobra.name=8-18 코브라 조준경
 item.mwc_KobraMount.name=마운트형 8-18 코브라 조준경
-item.mwc_Holographic2.name=이오텍 EXPS3-0 (탄색)
+item.mwc_Holographic2.name=이오텍 EXPS3-0 (황갈색)
 item.mwc_okp7.name=OKP-7 조준경
 item.mwc_MicroT1.name=마이크로-T1 조준경
 item.mwc_m2a1_sight.name=M2A1 조준경
@@ -661,14 +661,14 @@ item.mwc_AK101Stock.name=AK-101 개머리판
 item.mwc_CollapsableMOEStock.name=신축형 MOE 개머리판
 item.mwc_CollapsableMOEStockGreen.name=신축형 MOE 개머리판 (국방색)
 item.mwc_MagpulCTRStock.name=맥풀 CTR 개머리판
-item.mwc_MagpulCTRStockTan.name=맥풀 CTR 개머리판 (탄색)
+item.mwc_MagpulCTRStockTan.name=맥풀 CTR 개머리판 (황갈색)
 item.mwc_MilSpecStock.name=군용 개머리판
-item.mwc_MilSpecStockTan.name=군용 개머리판 (탄색)
+item.mwc_MilSpecStockTan.name=군용 개머리판 (황갈색)
 item.mwc_HeraArmsStock.name=Hera Arms 개머리판
 item.mwc_HK416Stock.name=HK416 개머리판
 item.mwc_M16Stock.name=M16 개머리판
-item.mwc_HK416StockTan.name=HK416 개머리판 (탄색)
-item.mwc_M16StockTan.name=M16 개머리판 (탄색)
+item.mwc_HK416StockTan.name=HK416 개머리판 (황갈색)
+item.mwc_M16StockTan.name=M16 개머리판 (황갈색)
 item.mwc_AK47stock.name=AK-47 개머리판
 item.mwc_RPKstock.name=RPK 개머리판
 item.mwc_Remington870Stock.name=R870 목재 개머리판
@@ -726,11 +726,11 @@ item.mwc_VGrip.name=전방손잡이
 item.mwc_StubbyGrip.name=짧은 그립
 item.mwc_MP5HOGUEGrip.name=MP5 호그 그립
 item.mwc_GlockHogueGrip.name=글록 호그 그립
-item.mwc_GlockHogueGripTan.name=글록 호그 그립 (탄색)
+item.mwc_GlockHogueGripTan.name=글록 호그 그립 (황갈색)
 item.mwc_HeraArmsGrip.name=헤라 암즈 그립
 item.mwc_M4Grip.name=M4 손잡이
-item.mwc_M4GripTan.name=M4 손잡이 (탄색)
-item.mwc_M4GripGray.name=M4 손잡이 (Gray)
+item.mwc_M4GripTan.name=M4 손잡이 (황갈색)
+item.mwc_M4GripGray.name=M4 손잡이 (회색)
 item.mwc_SOCOM_Grip.name=SOCOM 손잡이
 item.mwc_AK47Grip.name=AK-47 손잡이
 item.mwc_AK101Grip.name=AK-101 손잡이
@@ -749,13 +749,13 @@ item.mwc_SCCYCPX2GripTape.name=CPX-2 테이프 손잡이
 item.mwc_APSGrip.name=APS 손잡이
 item.mwc_MAC10Grip.name=MAC-10 손잡이
 item.mwc_HK416Grip.name=HK-416 손잡이
-item.mwc_HK416GripTan.name=HK-416 손잡이 (탄색)
+item.mwc_HK416GripTan.name=HK-416 손잡이 (황갈색)
 item.mwc_M110Grip.name=M110 손잡이
 item.mwc_S710TricunGrip.name=S7-10 트리쿤 손잡이
 item.mwc_K2C1Grip.name=K2C1 손잡이
 item.mwc_AK12Grip.name=AK-12 프로토타입 손잡이
 item.mwc_AK12ErgoGrip.name=AK-12 유선형 손잡이
-item.mwc_AKErgoGripTan.name=AK 유선형 손잡이 (탄색)
+item.mwc_AKErgoGripTan.name=AK 유선형 손잡이 (황갈색)
 item.mwc_KS23RaptorGrip.name=KS-23 손잡이
 
 
@@ -830,8 +830,8 @@ item.mwc_KrissVector556Handguard.name=크리스 벡터 5.56x45mm NATO 총몸
 item.mwc_M1CarbineBody.name=M1 카빈 총몸
 item.mwc_M1A1CarbineBody.name=M1 [M1A1] 카빈 총몸
 item.mwc_M14Body.name=M14 DMR 총몸
-item.mwc_Mk14TanBody.name=Mk14 EBR 총몸 (탄색)
-item.mwc_Mk14SnowBody.name=Mk14 EBR 총몸 (Arctic)
+item.mwc_Mk14TanBody.name=Mk14 EBR 총몸 (황갈색)
+item.mwc_Mk14SnowBody.name=Mk14 EBR 총몸 (극지 위장)
 item.mwc_Mk14BlackBody.name=Mk14 EBR 총몸
 item.mwc_M14Cover.name=M14 DMR Cover
 item.mwc_M14TriRailCover.name=M14 DMR 삼중 레일 커버
@@ -847,7 +847,7 @@ item.mwc_Remington700APACChassis.name=레밍턴-700 APAC 총몸
 item.mwc_Remington700MDTXRSChassis.name=레밍턴-700 MDTXRS 총몸
 item.mwc_ARX160Chassis.name=ARX-160 총몸
 item.mwc_ARX160ChassisOlive.name=ARX-160 총몸 (국방색)
-item.mwc_ARX160ChassisTan.name=ARX-160 총몸 (탄색)
+item.mwc_ARX160ChassisTan.name=ARX-160 총몸 (황갈색)
 item.mwc_G2ContenderBarrelShort.name=G2 컨텐더 총열
 item.mwc_G2ContenderBarrelLong.name=G2 컨텐더 연장 총열
 item.mwc_M14DMRSocomChassis.name=M14 DMR SOCOM 총몸
@@ -866,7 +866,7 @@ item.mwc_GlockRazorbackSlide.name=글록 레이저백 슬라이드
 item.mwc_Glock19RockslideOlive.name=글록-19 락 슬라이드 (국방색)
 item.mwc_Glock19GhostPrecisionSlide.name=글록-19 고스트 프레지션 슬라이드
 item.mwc_SCCYCPX2Body.name=CPX-2 총몸
-item.mwc_SCCYCPX2BodyTan.name=CPX-2 총몸 (탄색)
+item.mwc_SCCYCPX2BodyTan.name=CPX-2 총몸 (황갈색)
 item.mwc_SCCYCPX2Slide.name=CPX-2 슬라이드
 item.mwc_SCCYCPX2BSlide.name=CPX-2 슬라이드
 item.mwc_P226Slide.name=P226 슬라이드
@@ -879,7 +879,7 @@ item.mwc_MAC10Body.name=MAC-10 총몸
 item.mwc_MAC10Action.name=MAC-10 Action
 item.mwc_HK416Receiver.name=HK416 총몸
 item.mwc_HK417Receiver.name=HK417 총몸
-item.mwc_HK417ReceiverTan.name=HK417 총몸 (탄색)
+item.mwc_HK417ReceiverTan.name=HK417 총몸 (황갈색)
 item.mwc_M110Receiver.name=M110 총몸
 item.mwc_Beowulf50CalReceiver.name=베오울프 .50 구경 총몸
 item.mwc_S710Receiver.name=S7-10 총몸
@@ -911,7 +911,7 @@ item.sulfur_dust.name=황 가루
 item.tin_ingot.name=주석 가루
 item.synthetic_plastic.name=플라스틱 판
 item.synthetic_polymer_composite.name=나일론
-item.lead_ingot.name=연괴
+item.lead_ingot.name=납괴
 item.gunmetal_ingot.name=포금괴
 item.copper_ingot.name=구리괴
 item.gunmetal_composite.name=포금 복합체
@@ -1023,13 +1023,13 @@ tile.mwc_swat_truck.name=SWAT 트럭
 
 itemGroup.weapons=무기
 itemGroup.props=장식물 (크리에이티브 전용)
-itemGroup.ammunitionAndMagazines=탄약과 탄창
+itemGroup.ammunitionAndMagazines=탄약 및 탄창
 itemGroup.attachments=총기 부착물
 itemGroup.equipment=장비
 itemGroup.throwables=투척물
-itemGroup.blocksAndIngots=블럭과 주괴
+itemGroup.blocksAndIngots=블록 및 주괴
 
-key.categories.weaponlib=모던 워페어 큐브드
+key.categories.weaponlib=Modern Warfare Cubed
 key.texture_change=총 스킨 변경
 key.fire_mode=조정간 조작
 key.reload=재장전
@@ -1046,7 +1046,7 @@ key.opendoor=문 열기
 key.proning=엎드리기
 key.unload=탄창 제거
 
-key.categories.vehicle=모던 워페어 큐브드 (차량)
+key.categories.vehicle=Modern Warfare Cubed (차량)
 vehicle.brake=브레이크
 vehicle.clutch=클러치
 vehicle.handbrake=핸드브레이크
@@ -1072,24 +1072,24 @@ gui.currentZoom=배율: %s%%
 gui.grenadeExplodes=폭발까지 %s 초
 gui.coolingDown=냉각 중...
 
-config.category.ores.name=Ores
-config.ores.sulfurSpawnsPerChunk.property.name=Sulfur Ore Per Chunk
-config.ores.sulfurSpawnsPerChunk.property.tooltip=The amount of Sulfur Ore spawned per chunk.
-config.ores.copperSpawnsPerChunk.property.name=Copper Ore Per Chunk
-config.ores.copperSpawnsPerChunk.property.tooltip=The amount of Copper Ore spawned per chunk.
-config.ores.tinSpawnsPerChunk.property.name=Tin Ore Per Chunk
-config.ores.tinSpawnsPerChunk.property.tooltip=The amount of Tin Ore spawned per chunk.
-config.ores.leadSpawnsPerChunk.property.name=Lead Ore Per Chunk
-config.ores.leadSpawnsPerChunk.property.tooltip=The amount of Lead Ore spawned per chunk.
-config.ores.graphiteSpawnsPerChunk.property.name=Graphite Ore Per Chunk
-config.ores.graphiteSpawnsPerChunk.property.tooltip=The amount of Graphite Ore spawned per chunk.
+config.category.ores.name=광물
+config.ores.sulfurSpawnsPerChunk.property.name=청크당 황 광석
+config.ores.sulfurSpawnsPerChunk.property.tooltip=청크당 생성되는 황 광석의 양.
+config.ores.copperSpawnsPerChunk.property.name=청크당 구리 광석
+config.ores.copperSpawnsPerChunk.property.tooltip=청크당 생성되는 구리 광석의 양.
+config.ores.tinSpawnsPerChunk.property.name=청크당 주석 광석
+config.ores.tinSpawnsPerChunk.property.tooltip=청크당 생성되는 주석 광석의 양.
+config.ores.leadSpawnsPerChunk.property.name=청크당 납 광석
+config.ores.leadSpawnsPerChunk.property.tooltip=청크당 생성되는 납 광석의 양.
+config.ores.graphiteSpawnsPerChunk.property.name=청크당 흑연 광석
+config.ores.graphiteSpawnsPerChunk.property.tooltip=청크당 생성되는 흑연 광석의 양.
 
-config.category.gameplay.name=Gameplay
-config.gameplay.enableAmmoCounter.property.name=Ammo Counter
-config.gameplay.enableAmmoCounter.property.tooltip=Enable/Disable the Ammo Counter
-config.gameplay.ammoCounterX.property.name=Ammo Counter X
-config.gameplay.ammoCounterY.property.name=Ammo Counter Y
-config.gameplay.ammoCounterSize.property.name=Ammo Counter Size
+config.category.gameplay.name=게임플레이
+config.gameplay.enableAmmoCounter.property.name=탄약 수
+config.gameplay.enableAmmoCounter.property.tooltip=탄약 수를 켜고 끕니다.
+config.gameplay.ammoCounterX.property.name=탄약 수 X
+config.gameplay.ammoCounterY.property.name=탄약 수 Y
+config.gameplay.ammoCounterSize.property.name=탄약 수 크기
 config.gameplay.enableOpenDoorDisplay.property.name=Open Door Display
 config.gameplay.enableAmmoCounterBackground.property.name=Ammo Counter Background
 config.gameplay.enableAmmoCounterBackgroundReverse.property.name=Ammo Counter Reverse
@@ -1097,27 +1097,27 @@ config.gameplay.enableOpenDoorDisplay.property.tooltip=Enable/Disable the Open D
 config.gameplay.holdToAim.property.name=Hold To Aim
 config.gameplay.holdToAim.property.tooltip=Enable/Disable hold to aim
 config.gameplay.enableAmmoCounterBackground.property.tooltip=Enable/Disable the background for Ammo Counter
-config.gameplay.enableBleedingOnHit.property.name=Bleeding On Hit
-config.gameplay.enableBleedingOnHit.property.tooltip=Enable/Disable bleeding on hit
-config.gameplay.bulletBreakGlass.property.name=Bullet Break Glass
-config.gameplay.bulletBreakGlass.property.tooltip=Enable/Disable bullets breaking glass
-config.gameplay.penetrableBlocks.property.name=Penetrable Blocks
-config.gameplay.knockbackOnHit.property.name=Knockback On Hit
-config.gameplay.enableMuzzleEffects.property.name=Muzzle Effects
-config.gameplay.enableMuzzleEffects.property.tooltip=Enable/Disable the muzzle effects
-config.gameplay.enableBlurOnAim.property.name=Blur On Aim
-config.gameplay.enableBlurOnAim.property.tooltip=Enable/Disable blur on aim
-config.gameplay.explosionBreak.property.name=Explosion Break
-config.gameplay.explosionDamage.property.name=Explosion Damage
+config.gameplay.enableBleedingOnHit.property.name=맞았을 시 출혈
+config.gameplay.enableBleedingOnHit.property.tooltip=맞앚을 시 출혈을 켜고 끕니다.
+config.gameplay.bulletBreakGlass.property.name=총알로 유리 깨트리기
+config.gameplay.bulletBreakGlass.property.tooltip=총알로 유리 깨트리기를 켜고 끕니다.
+config.gameplay.penetrableBlocks.property.name=블록 관통
+config.gameplay.knockbackOnHit.property.name=맞았을 시 넉백
+config.gameplay.enableMuzzleEffects.property.name=총구 효과
+config.gameplay.enableMuzzleEffects.property.tooltip=총구 효과를 켜고 끕니다.
+config.gameplay.enableBlurOnAim.property.name=조준할 때 흐림 처리
+config.gameplay.enableBlurOnAim.property.tooltip=조준할 때 흐림 처리를 켜고 끕니다.
+config.gameplay.explosionBreak.property.name=폭발 파괴
+config.gameplay.explosionDamage.property.name=폭발 피해
 config.gameplay.explosionDamage.property.tooltip=Customize the explosion damage
 config.gameplay.explodedBlockDropChance.property.name=Exploded Block Drop Chance
 config.gameplay.explodedBlockDropChance.property.tooltip=The chance for blocks to drop when exploded
 config.gameplay.statusBarPosition.property.name=Status Bar Position
 config.gameplay.statusBarPosition.property.tooltip=The screen position for the Status Bar
 
-config.category.entities.name=Entities
-config.category.rendering.name=Rendering
-config.category.rendering.tooltip=Rendering/Shaders
+config.category.entities.name=엔티티
+config.category.rendering.name=렌더링
+config.category.rendering.tooltip=렌더링/셰이더
 config.category.screenshaders.name=Screen Shaders
 config.category.screenshaders.tooltip=Screen Shaders
 config.rendering.enableAllShaders.property.name=Enable All Shaders
@@ -1144,10 +1144,10 @@ config.rendering.screenshaders.filmGrainIntensity.property.name=Film Grain Inten
 config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Grain Intensity
 config.rendering.screenshaders.bloomLayers.property.name=Amount of Bloom Layers
 config.rendering.screenshaders.bloomLayers.property.tooltip=Amount of Bloom Layers
-config.rendering.enableFancyRainAndSnow.property.name=On-Screen Rain and Snow
-config.rendering.enableFancyRainAndSnow.property.tooltip=Please keep this setting DISABLED as it is currently broken.
+config.rendering.enableFancyRainAndSnow.property.name=온스크린 비와 눈
+config.rendering.enableFancyRainAndSnow.property.tooltip=이 설정은 작동하지 않으므로 비활성화로 유지하십시오.
 
 overlay.opendoor.name=문 열기
 
-death.attack.gun=%s 이(가) %s 의 %s로 사살당했습니다.
-death.attack.gun.noshooter=%s 이(가) %s로 사살당했습니다
+death.attack.gun=%s이(가) %s의 %s으(로) 인해 사살당했습니다.
+death.attack.gun.noshooter=%s이(가) %s으(로) 인해 사살당했습니다.
